--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+  "predeploy": "npm run build",
+  "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -47,10 +49,6 @@
   "devDependencies": {
     "gh-pages": "^5.0.0"
   },
-"homepage": "https://kevvzz.github.io/petinder-web-application/",
-"scripts": {
-  "predeploy": "npm run build",
-  "deploy": "gh-pages -d build"
-}
+"homepage": "https://kevvzz.github.io/petinder-web-application/"
   
 }
