--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-toastify": "^9.1.2",
     "web-vitals": "^2.1.4"
   },
+  "homepage": "https://kevvzz.github.io/petinder-web-application/",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -48,7 +49,7 @@
   },
   "devDependencies": {
     "gh-pages": "^5.0.0"
-  },
-"homepage": "https://kevvzz.github.io/petinder-web-application/"
+  }
+
   
 }
