--- a/package.json
+++ b/package.json
@@ -1,5 +1,3 @@
-
-
 {
   "name": "petinder-web-app",
   "version": "0.1.0",
@@ -15,6 +13,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
+    "react-quilljs": "^1.3.3",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.2",
@@ -26,8 +25,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-  "predeploy": "npm run build",
-  "deploy": "gh-pages -d build"
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -50,6 +49,4 @@
   "devDependencies": {
     "gh-pages": "^5.0.0"
   }
-
-  
 }
